--- a/skeletonx/htmlHead.chunk.html
+++ b/skeletonx/htmlHead.chunk.html
@@ -17,11 +17,21 @@
 	<!-- <script src="assets/libs/foundation/js/modernizr.js"></script> -->
 	[[$jsDefault]]
 
-	<!-- nonSASS stylesheet -->
-	<!--
-		<link rel="stylesheet" href="assets/libs/foundation/css/foundation.css" />
-		<link rel="stylesheet" href="assets/template/style.css" />
-	-->
+	[[- <!-- nonSASS stylesheet -->
+		<!--
+			<link rel="stylesheet" href="assets/libs/foundation/css/foundation.css" />
+			<link rel="stylesheet" href="assets/template/style.css" />
+		-->
+	]]
 
 	<!-- SASS stylesheet -->
 	<link rel="stylesheet" href="assets/css/screen.css" />
+	
+	[[- <!-- Print style / IE style -->
+		<link rel="stylesheet" href="assets/css/print.css" media="print">
+		<!--[if lt IE 9]>
+    		<link rel="stylesheet" href="assets/css/screen-ie.css" />    	
+        <![endif]-->
+	]]
+
+	
