--- a/skeletonx/bodyHead.chunk.html
+++ b/skeletonx/bodyHead.chunk.html
@@ -1,6 +1,31 @@
 [[- [[$nav-mobile]]	<!-- offcanvas navigation for mobile -->]]
-	<header class="row">
-		<div class="large-12 columns">
-	 		[[$nav]]
+	<header>
+		<div class="row">
+			<div class="large-3 columns">
+				<h1><img src="http://placehold.it/400x100&text=Logo"></h1>
+			</div>
+			<div class="large-9 columns">
+				<ul class="button-group right">
+					<li><a href="#" class="button">Link 1</a></li>
+					<li><a href="#" class="button">Link 2</a></li>
+					<li><a href="#" class="button">Link 3</a></li>
+					<li><a href="#" class="button">Link 4</a></li>
+				</ul>
+			</div>
 		</div>
+		 
+		 
+		<div class="row">
+			<div class="large-12 columns">
+				<img src="http://placehold.it/1000x400&text=[img]">
+			<hr />
+			</div>
+		</div>	
+
+		<div class="row">
+			<div class="large-12 columns">
+	 			[[$nav]]
+			</div>
+		</div>	
 	</header>
+
