--- a/skeletonx/footer.chunk.html
+++ b/skeletonx/footer.chunk.html
@@ -1,9 +1,8 @@
-<footer>
-	<div class="row">
-		<div class="large-12 columns">
-			&copy; [[CopyrightYear? &start=`modx`]] MyCompany. Powered by MODx, Foundation and SkeletonX ;)
-		</div>
-	</div>	
+<footer class="row">
+	<div class="large-12 columns">
+		<hr />
+		&copy; [[CopyrightYear? &start=`modx`]] MyCompany. Powered by MODx, Foundation and SkeletonX ;)
+	</div>
 </footer>
 
 [[$jsFooter]]
