--- a/skeletonx/nav.chunk.html
+++ b/skeletonx/nav.chunk.html
@@ -1,4 +1,6 @@
 <!-- navigation -->
 <nav>
-	
+    <ul class="inline-list">
+        [[getResources? &tpl=`nav.item` &sortby=`{"menuindex":"ASC"}` &depth=`0` &limit=`30` &parents=`0`]]
+    </ul>
 </nav>
